src/test/deca/context/valid/SansObjet/DeclVar-Plus-float-float-int.deca
// Description:
//    Declaration of a float variable using + operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    int y = 5; 
    float z = x + y ; 
}
