src/test/deca/context/invalid/SansObjet/DeclVar-Lower-float-int-string.deca
// Description:
//    Declaration of a float variable using < operation between a int variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  10; 
    string y = "Everyone"; 
    float z = x < y ; 
}
